// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/FieldLabel FieldLabel 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <label
      class="FieldLabel__Label-sc-1wkics-0 crAzuA FieldLabel-sc-1wkics-2 cBevrw"
      color="black"
      style="display:block"
    >
      <div
        class="Box-xda4ls-0 hQvIAg"
        data-testid="field-label"
      >
        <span
          class="FieldLabel__LabelText-sc-1wkics-1 kchUqg"
        >
          Default label
        </span>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots Components/FieldLabel with HelpText 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <label
      class="FieldLabel__Label-sc-1wkics-0 crAzuA FieldLabel-sc-1wkics-2 cBevrw"
      color="black"
      style="display:block"
    >
      <div
        class="Box-xda4ls-0 hQvIAg"
        data-testid="field-label"
      >
        <span
          class="FieldLabel__LabelText-sc-1wkics-1 kchUqg"
        >
          Default label
        </span>
        <p
          class="Text-sc-15glbbx-0 HelpText__HelpTextContent-sc-186o6oo-0 clUgZq"
          color="currentColor"
          font-size="medium"
        >
          I am help text. I can be a string or a node that includes a 
          <a
            class="Link-sc-1fcpbo4-0 dTHbTj"
            color="blue"
            font-size="medium"
            href="http://nulogy.design"
          >
            link
          </a>
          .
        </p>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots Components/FieldLabel with RequirementText 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <label
      class="FieldLabel__Label-sc-1wkics-0 crAzuA FieldLabel-sc-1wkics-2 cBevrw"
      color="black"
      style="display:block"
    >
      <div
        class="Box-xda4ls-0 hQvIAg"
        data-testid="field-label"
      >
        <span
          class="FieldLabel__LabelText-sc-1wkics-1 kchUqg"
        >
          Default label
        </span>
        <span
          class="Text-sc-15glbbx-0 lfjkof"
          color="darkGrey"
          font-size="12px"
        >
          (Required)
        </span>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots Components/FieldLabel with all additional text 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <label
      class="FieldLabel__Label-sc-1wkics-0 crAzuA FieldLabel-sc-1wkics-2 cBevrw"
      color="black"
      style="display:block"
    >
      <div
        class="Box-xda4ls-0 hQvIAg"
        data-testid="field-label"
      >
        <span
          class="FieldLabel__LabelText-sc-1wkics-1 kchUqg"
        >
          Default label
        </span>
        <span
          class="Text-sc-15glbbx-0 lfjkof"
          color="darkGrey"
          font-size="12px"
        >
          (Required)
        </span>
        <p
          class="Text-sc-15glbbx-0 HelpText__HelpTextContent-sc-186o6oo-0 clUgZq"
          color="currentColor"
          font-size="medium"
        >
          I am help text. I can give more details on the input below!
        </p>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots Components/FieldLabel with associated custom input component 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <label
      class="FieldLabel__Label-sc-1wkics-0 crAzuA FieldLabel-sc-1wkics-2 cBevrw"
      color="black"
      style="display:block"
    >
      <div
        class="Box-xda4ls-0 biCpIl"
        data-testid="field-label"
      >
        <span
          class="FieldLabel__LabelText-sc-1wkics-1 kchUqg"
        >
          Default label
        </span>
        <span
          class="Text-sc-15glbbx-0 lfjkof"
          color="darkGrey"
          font-size="12px"
        >
          (Required)
        </span>
        <p
          class="Text-sc-15glbbx-0 HelpText__HelpTextContent-sc-186o6oo-0 clUgZq"
          color="currentColor"
          font-size="medium"
        >
          I am help text. I can give more details on the input below!
        </p>
      </div>
      <div
        class="Box-xda4ls-0 Field-sc-1r2ui2p-0 edZDih"
      >
        <div
          class="Box-xda4ls-0 Flex-sc-1whlq91-0 eUTbMn"
        >
          <div
            class="Box-xda4ls-0 erhvLv"
            display="flex"
          >
            <input
              aria-invalid="false"
              class="InputField__StyledInput-a97ghf-0 eSDvmh"
              id="input1"
            />
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;
